--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "http-server": "^0.11.1",
     "mongoose": "^5.3.13",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
